--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,6 +1,4 @@
 @CHARSET "UTF-8";
-div{
-	width:200px;
-	height:200px;
-	background-color: yellow;
+.dropdown-menu>li{
+    background-color: #3c8dbc;
 }
